--- a/js-html-css-projects/buttons.html
+++ b/js-html-css-projects/buttons.html
@@ -6,6 +6,7 @@
      use semicolons after each line
      use px after number measurements
      use rgb for colors, vs code has color picker
+     CSS class: group of elements changed by CSS Code
   */
   .subscribe-button {
     background-color: rgb(200, 0, 0);
@@ -16,6 +17,14 @@
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    transition: opacity 0.15s;
+  }
+  /* pseudo-class, adds extra styles to an existing class */
+  .subscribe-button:hover {
+    opacity: 0.8;
+  }
+  .subscribe-button:active {
+    opacity: 0.5;
   }
   .join-button {
     background-color: white;
@@ -27,6 +36,31 @@
     width: 62px;
     border-radius: 2px;
     cursor: pointer;
+    transition: background-color 0.15s, 
+      color 0.15s;
+  }
+  .join-button:hover {
+    background-color: rgb(40,120,210); 
+    color: white;
+  }
+  .join-button:active {
+    opacity: 0.7;
+  }
+  .tweet-button {
+    background-color: rgb(2,158,255);
+    color: white;
+    border: none;
+    height: 36px;
+    width: 74px;
+    border-radius: 18px;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+    margin-left: 8px;
+    transition: box-shadow 0.15s;
+  }
+  .tweet-button:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15); /* x, y, blur, color */
   }
 </style>
 
@@ -36,4 +70,7 @@
 </button>
 <button class = "join-button">
   JOIN
+</button>
+<button class = "tweet-button">
+  Tweet
 </button>
