--- a/js-html-css-projects/buttons.html
+++ b/js-html-css-projects/buttons.html
@@ -7,17 +7,25 @@
      use px after number measurements
      use rgb for colors, vs code has color picker
      CSS class: group of elements changed by CSS Code
-  */
+     CSS box model: how much space an element takes up
+      margin: space on outside of an element
+      border: space on the edge of an element
+      padding: space on the inside of an element, use instead of manual height/width
+  */  
   .subscribe-button {
     background-color: rgb(200, 0, 0);
     color: white;
     border: none;
-    height: 36px;
-    width: 110px;
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    margin-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
     transition: opacity 0.15s;
+    vertical-align: top;
   }
   /* pseudo-class, adds extra styles to an existing class */
   .subscribe-button:hover {
@@ -28,26 +36,29 @@
   }
   .join-button {
     background-color: white;
-    border-color: rgb(40,120,210);
+    border-color: rgb(6,95,212);
     border-style: solid;
     border-width: 1px;
-    color: rgb(40,120,210);
-    height: 36px;
-    width: 62px;
+    color: rgb(6,95,212);
     border-radius: 2px;
     cursor: pointer;
     transition: background-color 0.15s, 
       color 0.15s;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 16px;
+    padding-right: 16px;
+    vertical-align: top;
   }
   .join-button:hover {
-    background-color: rgb(40,120,210); 
+    background-color: rgb(6,95,212); 
     color: white;
   }
   .join-button:active {
     opacity: 0.7;
   }
   .tweet-button {
-    background-color: rgb(2,158,255);
+    background-color: rgb(29,155,240);
     color: white;
     border: none;
     height: 36px;
@@ -58,6 +69,7 @@
     cursor: pointer;
     margin-left: 8px;
     transition: box-shadow 0.15s;
+    vertical-align: top;
   }
   .tweet-button:hover {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15); /* x, y, blur, color */
