--- a/js-html-css-projects/Supersimpledev/youtube/youtube.html
+++ b/js-html-css-projects/Supersimpledev/youtube/youtube.html
@@ -16,21 +16,10 @@
         display: block;
       }
       .thumbnail {
-        width: 300px;
+        width: 100%;
       }
       .thumbnail-row{
         margin-bottom: 12px;
-      }
-      .video-preview{
-        display: inline-block;
-        width: 300px;
-        vertical-align: top;
-        margin-left: 0;
-        margin-right: 15px;
-      }
-      .video-info{
-        display: inline-block;
-        width: 200px;
       }
       .video-title{
         margin-top: 0;
@@ -48,24 +37,30 @@
         font-size: 12px;
         color: rgb(96,96,96);
       }
-      .channel-picture{
-        display: inline-block;
-        width: 50px;
-        vertical-align: top;
-      }
       .profile-picture{
         width: 40px;
         border-radius: 50px;
+      }
+      .video-info-grid{
+        display: grid;
+        grid-template-columns: 50px 1fr;
+      }
+      .video-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 16px;
+        row-gap: 40px;
       }
     </style>
   </head>
   <body>
     <input class="search-bar" placeholder="Search" type="text">
-    <div class="video-preview">
+    <div class = "video-grid">
+      <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
       </div>
-      <div>
+      <div class = "video-info-grid">
         <div class="channel-picture">
           <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
         </div>
@@ -81,18 +76,18 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="video-preview">
+      </div>
+      <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
       </div>
-      <div>
+      <div class = "video-info-grid">
         <div class="channel-picture">
           <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
         </div>
         <div class="video-info">
           <p class="video-title">
-            Try Not to Laugh Challenge $9
+            Try Not to Laugh Challenge #9
           </p>
           <p class="video-author">
             Markiplier
@@ -100,6 +95,91 @@
           <p class="video-stats">
             19M views &#183 4 years ago
           </p>
+        </div>
+      </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-3.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              The Simplest Math Problem No One Can Solve - Collatz Conjecture
+            </p>
+            <p class="video-author">
+              Veritasium
+            </p>
+            <p class="video-stats">
+              18M views &#183 4 months ago
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Kadane's Algorithm to Maximum Sum Subarray Problem
+            </p>
+            <p class="video-author">
+              CS Dojo
+            </p>
+            <p class="video-stats">
+              519K views &#183 5 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Anything You Can Fit In The Circle I’ll Pay For
+            </p>
+            <p class="video-author">
+              MrBeast
+            </p>
+            <p class="video-stats">
+              141M views &#183 1 year ago
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Why Planes Don't Fly Over Tibet
+            </p>
+            <p class="video-author">
+              RealLifeLore
+            </p>
+            <p class="video-stats">
+              6.6M views &#183 1 year ago
+            </p>
+          </div>
         </div>
       </div>
     </div>
